complete auth and admin features in both FE and BE

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,32 +1,41 @@
 # Database
-DATABASE_URL="postgresql://figuro_user:yourpassword@localhost:5432/figuro_db"
+DATABASE_URL="postgresql://username:password@localhost:5432/figuro_db"
 
-# Redis
-REDIS_URL="redis://localhost:6379"
+# JWT
+JWT_SECRET="your-super-secret-jwt-key-here"
+JWT_EXPIRES_IN="7d"
 
 # Server
 PORT=3000
+NODE_ENV=development
+FRONTEND_URL="http://localhost:5173"
 
-# JWT Secret (for authentication)
-JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
-JWT_EXPIRES_IN="2h"                # Standard session expiry (e.g., 2h, 1h)
-JWT_REMEMBER_ME_EXPIRES_IN="7d"    # 'Remember me' session expiry (e.g., 7d)
+# Redis (for rate limiting)
+REDIS_URL="redis://localhost:6379"
 
-# Email
-RESEND_API_KEY="your-resend-api-key"
-RESEND_FROM_EMAIL="yourname@resend.dev"
+# Rate Limiting Configuration
+RATE_LIMIT_WINDOW_MS=900000  # 15 minutes
+RATE_LIMIT_MAX_REQUESTS=100  # 100 requests per window
+RATE_LIMIT_AUTH_MAX_REQUESTS=10  # 10 auth requests per window
+RATE_LIMIT_ADMIN_MAX_REQUESTS=50  # 50 admin requests per window
 
-# Payment Gateway Keys (add your actual keys)
-MOMO_API_KEY=""
-MOMO_SECRET_KEY=""
-ZALOPAY_API_KEY=""
-VNPAY_API_KEY=""
+# Email Service (Resend)
+RESEND_API_KEY="your_resend_api_key_here"
+RESEND_FROM_EMAIL="Figuro <noreply@figuro.com>"
 
-# Email/SMS Service (add your actual keys)
-EMAIL_SERVICE_API_KEY=""
-SMS_SERVICE_API_KEY=""
+# OAuth Configuration
+# Google OAuth
+GOOGLE_CLIENT_ID="your_google_client_id"
+GOOGLE_CLIENT_SECRET="your_google_client_secret"
+GOOGLE_CALLBACK_URL="http://localhost:3000/api/auth/google/callback"
 
-# Voice Agent (add your actual keys)
-GOOGLE_CLOUD_SPEECH_API_KEY=""
-DIALOGFLOW_API_KEY=""
-AMAZON_POLLY_API_KEY="" 
+# Facebook OAuth
+FACEBOOK_APP_ID="your_facebook_app_id"
+FACEBOOK_APP_SECRET="your_facebook_app_secret"
+FACEBOOK_CALLBACK_URL="http://localhost:3000/api/auth/facebook/callback"
+
+# Payment Services
+# VNPAY
+VNPAY_TMN_CODE="your_vnpay_tmn_code"
+VNPAY_HASH_SECRET="your_vnpay_hash_secret"
+VNPAY_URL="https://sandbox.vnpay.vn/paymentv2/vpcpay.html"
