--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/compression": "^1.8.1",
     "@types/pg": "^8.15.4",
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "chalk": "^5.4.1",
     "compression": "^1.8.1",
