feat: implement Vietnamese translations for auth and customer components, add token expiration handling, and enhance wishlist functionality

--- a/backend/env.example
+++ b/backend/env.example
@@ -4,6 +4,7 @@ DATABASE_URL="postgresql://username:password@localhost:5432/figuro_db"
 # JWT
 JWT_SECRET="your-super-secret-jwt-key-here"
 JWT_EXPIRES_IN="7d"
+JWT_REMEMBER_ME_EXPIRES_IN="7d"
 
 # Server
 PORT=3000
@@ -34,8 +35,20 @@ FACEBOOK_APP_ID="your_facebook_app_id"
 FACEBOOK_APP_SECRET="your_facebook_app_secret"
 FACEBOOK_CALLBACK_URL="http://localhost:3000/api/auth/facebook/callback"
 
-# Payment Services
+# Payment
+# Momo
+MOMO_PARTNER_CODE=your_partner_code
+MOMO_ACCESS_KEY=your_access_key
+MOMO_SECRET_KEY=your_secret_key
+MOMO_ENVIRONMENT=sandbox
+
+# ZaloPay
+ZALOPAY_APP_ID=your_app_id
+ZALOPAY_KEY1=your_key1
+ZALOPAY_KEY2=your_key2
+ZALOPAY_ENVIRONMENT=sandbox
+
 # VNPAY
-VNPAY_TMN_CODE="your_vnpay_tmn_code"
-VNPAY_HASH_SECRET="your_vnpay_hash_secret"
-VNPAY_URL="https://sandbox.vnpay.vn/paymentv2/vpcpay.html"
+VNPAY_TMN_CODE=your_tmn_code
+VNPAY_HASH_SECRET=your_hash_secret
+VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
