chore: update .gitignore for backend and voice agent, remove Vietnamese translation files, and implement voice agent API structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-# Node.js
+# =========================================
+# Node.js / Backend
+# =========================================
 node_modules/
 npm-debug.log*
 yarn-debug.log*
@@ -9,25 +11,42 @@ pnpm-debug.log*
 *.tsbuildinfo
 dist/
 
-# Environment variables
-.env
-.env.*
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Prisma
+prisma/migrations/
 
-# Logs
+# Logs & PIDs
 logs/
 *.log
 *.pid
 *.seed
 *.pid.lock
 
-# Coverage
+# Coverage reports
 coverage/
 
-# VSCode/IDE
+# =========================================
+# Frontend (React/Vite/Next.js)
+# =========================================
+frontend/build/
+frontend/.next/
+frontend/.output/
+frontend/node_modules/
+frontend/dist/
+
+# =========================================
+# Environment variables
+# =========================================
+.env
+.env.*
+!.env.example
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# =========================================
+# IDE / Editor files
+# =========================================
 .vscode/
 .idea/
 .DS_Store
@@ -37,30 +56,24 @@ coverage/
 *.sln
 *.sw?
 
-# Prisma
-prisma/migrations/
-
-# Redis (if using local dump)
-dump.rdb
-
-# Resend/SendGrid local dev
-resend.log
-sendgrid.log
-
-# Misc
-*.tgz
-*.bak
-*.tmp
-
-# Frontend build
-frontend/build/
-frontend/.next/
-frontend/.output/
-
-# Python (voice agent)
+# =========================================
+# Python / Voice Agent
+# =========================================
 voice-agent/__pycache__/
+voice-agent/app/__pycache__/
 voice-agent/.mypy_cache/
 voice-agent/.pytest_cache/
 voice-agent/.venv/
 voice-agent/venv/
 voice-agent/.env
+voice-agent/app/static/audio/
+
+# =========================================
+# Misc
+# =========================================
+*.tgz
+*.bak
+*.tmp
+dump.rdb       # Redis dump file
+resend.log     # Resend local log
+sendgrid.log   # SendGrid local log
