--- a/voice-agent/requirements.txt
+++ b/voice-agent/requirements.txt
@@ -1,2 +1,15 @@
-fastapi
-uvicorn
+fastapi==0.104.1
+uvicorn==0.24.0
+pydantic==2.5.0
+python-multipart==0.0.6
+speechrecognition==3.10.0
+pyttsx3==2.90
+pyaudio==0.2.11
+numpy==1.25.2
+librosa==0.10.1
+soundfile==0.12.1
+spacy==3.7.2
+python-dotenv==1.0.0
+openai==1.3.7
+requests==2.31.0
+gTTS==2.5.1
