docs: update README with project structure, quick start instructions, and configuration details; modify backend env.example for new URL keys

--- a/backend/env.example
+++ b/backend/env.example
@@ -9,7 +9,8 @@ JWT_REMEMBER_ME_EXPIRES_IN="7d"
 # Server
 PORT=3000
 NODE_ENV=development
-FRONTEND_URL="http://localhost:5173"
+WEB_BASE_URL="http://localhost:5173"
+API_BASE_URL="http://localhost:3000"
 
 # Redis (for rate limiting)
 REDIS_URL="redis://localhost:6379"
