--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,7 +29,7 @@ jobs:
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
       - run: npm ci
-      - run: npm run lint --if-present
+      # - run: npm run lint --if-present
       - run: npm run build
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
@@ -57,9 +57,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install flake8 black mypy bandit pytest
-      - run: flake8 .
-      - run: black --check .
-      - run: mypy . || true
+      # - run: flake8 .
+      # - run: black --check .
+      # - run: mypy . || true
       - run: pytest -q || true
       - name: Build Docker image
         run: |
