--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ frontend/.next/
 frontend/.output/
 frontend/node_modules/
 frontend/dist/
+frontend/.vercel
 
 # =========================================
 # Environment variables
