--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,6 +48,10 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y portaudio19-dev
       - name: Cache pip
         uses: actions/cache@v4
         with:
@@ -56,14 +60,15 @@ jobs:
       - run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install flake8 black mypy bandit pytest
+          pip install bandit pytest
       # - run: flake8 .
       # - run: black --check .
       # - run: mypy . || true
       - run: pytest -q || true
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/voice-agent:${{ github.sha }} .
+          IMAGE_NAME=$(echo "ghcr.io/${{ github.repository }}/voice-agent:${{ github.sha }}" | tr '[:upper:]' '[:lower:]')
+          docker build -t $IMAGE_NAME .
       - name: Login to GHCR
         if: github.event_name == 'push'
         run: echo $GITHUB_TOKEN | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
@@ -72,7 +77,8 @@ jobs:
       - name: Push image
         if: github.event_name == 'push'
         run: |
-          docker push ghcr.io/${{ github.repository }}/voice-agent:${{ github.sha }}
+          IMAGE_NAME=$(echo "ghcr.io/${{ github.repository }}/voice-agent:${{ github.sha }}" | tr '[:upper:]' '[:lower:]')
+          docker push $IMAGE_NAME
 
   docker_frontend:
     name: Frontend Docker build/push
@@ -85,7 +91,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/frontend:${{ github.sha }} .
+          IMAGE_NAME=$(echo "ghcr.io/${{ github.repository }}/frontend:${{ github.sha }}" | tr '[:upper:]' '[:lower:]')
+          docker build -t $IMAGE_NAME .
       - name: Login to GHCR
         if: github.event_name == 'push'
         run: echo $GITHUB_TOKEN | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
@@ -94,7 +101,8 @@ jobs:
       - name: Push image
         if: github.event_name == 'push'
         run: |
-          docker push ghcr.io/${{ github.repository }}/frontend:${{ github.sha }}
+          IMAGE_NAME=$(echo "ghcr.io/${{ github.repository }}/frontend:${{ github.sha }}" | tr '[:upper:]' '[:lower:]')
+          docker push $IMAGE_NAME
 
   api_backend:
     name: API Backend (build/push)
@@ -109,7 +117,8 @@ jobs:
           node-version: '20'
       - name: Build image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/backend:${{ github.sha }} .
+          IMAGE_NAME=$(echo "ghcr.io/${{ github.repository }}/backend:${{ github.sha }}" | tr '[:upper:]' '[:lower:]')
+          docker build -t $IMAGE_NAME .
       - name: Login to GHCR
         if: github.event_name == 'push'
         run: echo $GITHUB_TOKEN | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
@@ -118,7 +127,8 @@ jobs:
       - name: Push image
         if: github.event_name == 'push'
         run: |
-          docker push ghcr.io/${{ github.repository }}/backend:${{ github.sha }}
+          IMAGE_NAME=$(echo "ghcr.io/${{ github.repository }}/backend:${{ github.sha }}" | tr '[:upper:]' '[:lower:]')
+          docker push $IMAGE_NAME
 
   deploy:
     name: Deploy (optional)
