--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ dump.rdb       # Redis dump file
 resend.log     # Resend local log
 sendgrid.log   # SendGrid local log
 .vercel
+voice-agent/app/__pycache__/api.cpython-310.pyc
