--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,6 @@ resend.log     # Resend local log
 sendgrid.log   # SendGrid local log
 .vercel
 voice-agent/app/__pycache__/api.cpython-310.pyc
+voice-agent/app/__pycache__/api.cpython-310.pyc
+voice-agent/app/__pycache__/schemas.cpython-310.pyc
+voice-agent/app/__pycache__/service.cpython-310.pyc
